# back-taller4_vf

./: README.md  docker-compose.yml
b/: .dockerignore  .gitignore  Dockerfile  Makefile  proyecto-desarrollo-cloud.json  pyproject.toml
b/api/: main.py  worker.py
b/api/constants/: auth_constants.py  server_constants.py
b/api/controllers/: auth_controller.py  file_controller.py  root_controller.py  task_controller.py
b/api/core/: db.py
b/api/models/: model.py
b/api/repositories/: task_repository.py  user_repository.py
b/api/schemas/: auth_schema.py  task_schema.py  user_schema.py
b/api/services/: pubsub_services.py  storage_services.py
b/api/utils/: auth_utils.py  file_utils.py
